phpfusion/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - api.anrop.se
      - new.anrop.se
      - playwithsix.anrop.se
      - steam-workshop.anrop.se
      - streams.anrop.se
      - squad.anrop.se
      secretName: phpfusion-tls
  rules:
    - host: api.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api
              port:
                number: 8080
    - host: new.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 8080
    - host: playwithsix.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: playwithsix
              port:
                number: 8080
    - host: steam-workshop.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: steam-workshop
              port:
                number: 8080
    - host: streams.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: streams
              port:
                number: 8080
    - host: squad.anrop.se
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: squad
              port:
                number: 8080
